--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ body {
     -ms-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
+    margin-bottom: 5px;
   } 
   .dropdown-content a:hover {color: #FFEC00}
   
