--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,7 @@ header .slidenav-menu {
     border-radius: 500px;
     margin-top: 38px;
     text-transform: uppercase;
+    text-align: center;
 }
 .about-us .text-block button:hover {
     background-color: #111;
