--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,6 +10,158 @@
         display: block !important;
     }
 }
+@media (min-width: 600px) and (max-width:1000px){
+    .language-btn-m {
+        font-family: Gilroy-Medium;
+        font-size: 16px;
+        background-color: rgba(54, 54, 54, 0.2);
+        border: none;
+        border-radius: 20px;
+        margin-top: 2px;
+        color: #111;
+        display: inline-block !important;
+        float: right;
+        margin-right: 20px;
+        width: 112px;
+        height: 38px;
+        padding-left: 22px;
+        /* padding-left: 10px !important; */
+        text-align: left;
+    }
+      
+      /* The container <div> - needed to position the dropdown content */
+
+      .dropdown-content-m {
+        display: none;
+        position: absolute;
+        width: 112px !important;
+        padding-bottom: 10px;
+        right: 20px;
+        top: 170px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        background-color: rgba(54, 54, 54, 0.2);
+        z-index: 1;
+      }
+
+      .dropdown-content-m a {
+        font-family: Gilroy-Medium;
+        font-size: 16px;
+        color: #111;
+        text-align: left;
+        padding-left: 22px;
+        padding-top: 6px;
+        text-decoration: none;
+        display: block;
+      }
+    
+    .dropdown-menu-m a {
+        text-decoration: none;
+        font-family: Gilroy-Regular;
+        font-size: 16px;
+        color: #ffffff;
+    }
+   
+    .navbar {
+        display: none !important;
+    }
+    .slidenav-menu {
+        display: block !important;
+    }
+    .slidenav-head {
+        display: block !important;
+    }
+    header .mobile-nav {
+        display: inline-block !important;
+        background-color: #111;
+        height: 60px !important;
+        padding-top: 20px;
+        width: 100%;
+        border: none !important;
+    }
+
+    header .mobile-nav a {
+        text-decoration: none;
+        font-family: Gilroy-Medium !important;
+        color: #fff;
+        float: left;
+        font-size: 1.6em;
+        padding-top: 10px;
+        /* display: inline-block; */
+        padding-left: 20px;
+    }
+    
+    @media screen and (max-height: 450px) {
+        .sidenav {padding-top: 15px;}
+        .sidenav a {font-size: 18px;}
+      }
+    
+    header span {
+        padding-top: 9px;
+        float: right;
+        color: #fff;
+        margin-right: 15px;
+    }
+    .sidenav {
+        z-index: 999 !important;
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        background: #71F3FA;;
+        overflow-x: hidden;
+        transition: 0.7s;
+      }
+    .slidenav-head {
+        width: 100%;
+        height: 50px;
+    }
+    .slidenav-menu {
+        padding-top: 80px;
+    }
+    .sidenav .mobile-header-logo {
+        float: left;
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+    
+    .sidenav .mobile-nav-link {
+        padding: 8px 0px 40px 22px;
+        text-decoration: none;
+        font-size: 16px;
+        line-height: 19px;
+        color: #111;
+        font-family: Gilroy-Medium;
+        display: block;
+        
+      }
+      
+    .sidenav .mobile-nav-link:hover {
+        color: #111;
+      }
+      
+    .sidenav .closebtn {
+        position: absolute;
+        /* float: right; */
+        top: 50;
+        padding: 8px 0px 40px 22px;
+        text-decoration: none;
+        font-size: 16px;
+        line-height: 19px;
+        color: #111;
+        font-family: Gilroy-Medium;
+        display: block;
+        font-family: Gilroy-Regular;
+        color: #111;
+        transition: 0.7s;
+        right: 20;
+        font-size: 55px;
+        margin-left: 60px;
+        padding: 0 !important;
+    }
+}
 @media (min-width: 350px) and (max-width:600px){
     .language-btn-m {
         font-family: Gilroy-Medium;
@@ -54,16 +206,6 @@
         text-decoration: none;
         display: block;
       }
-    .dropdown-toggle::after {
-        display: inline-block;
-        margin-left: .255em;
-        vertical-align: .255em;
-        content: "";
-        border-top: 0;
-        border-right: 0;
-        border-bottom: 0;
-        border-left: 0;
-    }
     
     .dropdown-menu-m a {
         text-decoration: none;
