--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,7 @@
         url('../fonts/Gilroy-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-ExtraboldItalic.eot');
-    src: local('../fonts/Gilroy Extrabold Italic'), local('../fonts/Gilroy-ExtraboldItalic'),
-        url('../fonts/Gilroy-ExtraboldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-ExtraboldItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-ExtraboldItalic.woff') format('woff'),
-        url('../fonts/Gilroy-ExtraboldItalic.ttf') format('truetype');
-    font-weight: 800;
-    font-style: italic;
+    font-display: swap;   
 }
 
 @font-face {
@@ -32,6 +21,7 @@
         url('../fonts/Gilroy-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -44,6 +34,7 @@
         url('../fonts/Gilroy-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -56,6 +47,7 @@
         url('../fonts/Gilroy-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -68,6 +60,7 @@
         url('../fonts/Gilroy-Semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -80,157 +73,7 @@
         url('../fonts/Gilroy-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-MediumItalic.eot');
-    src: local('../fonts/Gilroy Medium Italic'), local('../fonts/Gilroy-MediumItalic'),
-        url('../fonts/Gilroy-MediumItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-MediumItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-MediumItalic.woff') format('woff'),
-        url('../fonts/Gilroy-MediumItalic.ttf') format('truetype');
-    font-weight: 500;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-BlackItalic.eot');
-    src: local('../fonts/Gilroy Black Italic'), local('../fonts/Gilroy-BlackItalic'),
-        url('../fonts/Gilroy-BlackItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-BlackItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-BlackItalic.woff') format('woff'),
-        url('../fonts/Gilroy-BlackItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy-UltraLight';
-    src: url('../fonts/Gilroy-UltraLight.ttf');
-    font-weight: 200;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-RegularItalic.eot');
-    src: local('../fonts/Gilroy Regular Italic'), local('../fonts/Gilroy-RegularItalic'),
-        url('../fonts/Gilroy-RegularItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-RegularItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-RegularItalic.woff') format('woff'),
-        url('../fonts/Gilroy-RegularItalic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-SemiboldItalic.eot');
-    src: local('../fonts/Gilroy Semibold Italic'), local('../fonts/Gilroy-SemiboldItalic'),
-        url('../fonts/Gilroy-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-SemiboldItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-SemiboldItalic.woff') format('woff'),
-        url('../fonts/Gilroy-SemiboldItalic.ttf') format('truetype');
-    font-weight: 600;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-HeavyItalic.eot');
-    src: local('../fonts/Gilroy Heavy Italic'), local('../fonts/Gilroy-HeavyItalic'),
-        url('../fonts/Gilroy-HeavyItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-HeavyItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-HeavyItalic.woff') format('woff'),
-        url('../fonts/Gilroy-HeavyItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-Extrabold.eot');
-    src: local('../fonts/Gilroy Extrabold'), local('../fonts/Gilroy-Extrabold'),
-        url('../fonts/Gilroy-Extrabold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-Extrabold.woff2') format('woff2'),
-        url('../fonts/Gilroy-Extrabold.woff') format('woff'),
-        url('../fonts/Gilroy-Extrabold.ttf') format('truetype');
-    font-weight: 800;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-BoldItalic.eot');
-    src: local('../fonts/Gilroy Bold Italic'), local('../fonts/Gilroy-BoldItalic'),
-        url('../fonts/Gilroy-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-BoldItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-BoldItalic.woff') format('woff'),
-        url('../fonts/Gilroy-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-UltraLightItalic.eot');
-    src: local('../fonts/Gilroy UltraLight Italic'), local('../fonts/Gilroy-UltraLightItalic'),
-        url('../fonts/Gilroy-UltraLightItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-UltraLightItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-UltraLightItalic.woff') format('woff'),
-        url('../fonts/Gilroy-UltraLightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-LightItalic.eot');
-    src: local('../fonts/Gilroy Light Italic'), local('../fonts/Gilroy-LightItalic'),
-        url('../fonts/Gilroy-LightItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-LightItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-LightItalic.woff') format('woff'),
-        url('../fonts/Gilroy-LightItalic.ttf') format('truetype');
-    font-weight: 300;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy-Heavy';
-    src: url('../fonts/Gilroy-Heavy.eot');
-    src: local('../fonts/Gilroy Heavy'), local('../fonts/Gilroy-Heavy'),
-        url('../fonts/Gilroy-Heavy.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-Heavy.woff2') format('woff2'),
-        url('../fonts/Gilroy-Heavy.woff') format('woff'),
-        url('../fonts/Gilroy-Heavy.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy-Thin';
-    src: url('../fonts/Gilroy-Thin.eot');
-    src: local('../fonts/Gilroy Thin'), local('../fonts/Gilroy-Thin'),
-        url('../fonts/Gilroy-Thin.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-Thin.woff2') format('woff2'),
-        url('../fonts/Gilroy-Thin.woff') format('woff'),
-        url('../fonts/Gilroy-Thin.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-ThinItalic.eot');
-    src: local('../fonts/Gilroy Thin Italic'), local('../fonts/Gilroy-ThinItalic'),
-        url('../fonts/Gilroy-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-ThinItalic.woff2') format('woff2'),
-        url('../fonts/Gilroy-ThinItalic.woff') format('woff'),
-        url('../fonts/Gilroy-ThinItalic.ttf') format('truetype');
-    font-weight: 100;
-    font-style: italic;
+    font-display: swap;
 }
 
 
@@ -669,6 +512,7 @@ width: 100%;
     margin-bottom: 20px;
 }
 .contact-us textarea {
+    -webkit-appearance: none;
     background-color: #111;
     font-family: Gilroy-Medium;
     font-size: 16px;
